feat(vehicles): Add manufacturer and makes and detail of makes and manufacturer

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,10 @@
       "@shared/*": ["app/shared/*"],
       "@modules/*": ["app/modules/*"],
       "@vehicles/*": ["app/modules/vehicles/*"],
-      "@environments/*": ["environments/*"]
+      "@vehicles/data-access/*": ["app/modules/vehicles/data-access/*"],
+      "@vehicles/ui/*": ["app/modules/vehicles/ui/*"],
+      "@environments/*": ["environments/*"],
+      "@styles/*": ["styles/*"]
     }
   },
   "include": [
